# uniswap-sdk

./: .gitignore  CONTRIBUTING.md  README.md  ape-config.yaml  pyproject.toml  requirements-bot.txt  setup.py
.github/workflows/: build.yaml  commitlint.yaml  publish.yaml  test.yaml  title.yaml
bots/: README.md  arbitrage.py  example.py  pricewatcher.py  v4-trader.py
scripts/: update_manifests.py
tests/functional/: test_universal_router.py
uniswap_sdk/: __init__.py  _cli.py  main.py  packages.py  permit2-manifest.json  permit2.py  solver.py  types.py  unirouter-manifest.json  universal_router.py  utils.py  v2-manifest.json  v2.json  v2.py  v3-manifest.json  v3.py
